tests/e2e/semantics/arg_type_no_object.story
function foo a:object
    b = 1
